Fixed extract_counsel to split on "for"

--- a/metadata/templates/index.html
+++ b/metadata/templates/index.html
@@ -88,12 +88,24 @@
         </ul>
 
         <p><strong>Disposition:</strong> {{ disposition }}</p>
+        {% if written_reasons %}
         <p><strong>Written reasons by:</strong></p>
         <ul>
             {% for judge in written_reasons %}
                 <li>{{ judge }}</li>
             {% endfor %}
         </ul>
+        {% endif %}
+
+        {% if majority_reasons %}
+        <p><strong>Majority reasons by:</strong></p>
+        <ul>
+            {% for judge in majority_reasons %}
+                <li>{{ judge }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
         {% if concurring %}
 
             <p><strong>Concurring:</strong></p>
@@ -110,6 +122,28 @@
             <p><strong>Concurring reasons by:</strong></p>
             <ul>
                 {% for judge in concurring_reasons %}
+                    <li>{{ judge }}</li>
+                {% endfor %}
+            </ul>
+
+        {% endif %}
+
+        {% if minority_reasons %}
+
+            <p><strong>Minority reasons by:</strong></p>
+            <ul>
+                {% for judge in minority_reasons %}
+                    <li>{{ judge }}</li>
+                {% endfor %}
+            </ul>
+
+        {% endif %}
+
+        {% if dissenting_reasons %}
+
+            <p><strong>Dissenting reasons by:</strong></p>
+            <ul>
+                {% for judge in dissenting_reasons %}
                     <li>{{ judge }}</li>
                 {% endfor %}
             </ul>
