--- a/metadata/templates/index.html
+++ b/metadata/templates/index.html
@@ -71,8 +71,17 @@
                 <li>{{ file }}</li>
             {% endfor %}
         </ul>
-        <p><strong>Parties:</strong></p>
+        
+        {% if other_citations %}
+        <p><strong>Other citations:</strong></p>
+        <ul>
+            {% for citation in other_citations %}
+                <li>{{ citation }}</li>
+            {% endfor %}
+        </ul><br>
+        {% endif %}
 
+        <p><strong>Parties:</strong></p>
         <ul>
         {% for party in parties %}
             <li><strong>{{ party.1 }}</strong>: {{ party.0 }}</li><br>
